# Binary-Classifier

./: .gitignore  README.md  pyproject.toml
binary_classifier/: __init__.py  cli.py  data.py  metrics.py  model.py
data/: rocket_stove_sample.csv
tests/: test_classifier.py
